// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splash should render a Splash (with Subtitle) correctly 1`] = `
<div
  className="Splash sc-htpNat fICcwH"
>
  <div
    className="sc-bdVaJa hYHEfa"
  >
    Subtitle
  </div>
</div>
`;

exports[`Splash should render a Splash (with Title) correctly 1`] = `
<div
  className="Splash sc-htpNat fICcwH"
>
  <div
    className="sc-bwzfXH crJnMU"
  >
    Title
  </div>
</div>
`;

exports[`Splash should render the default Splash correctly 1`] = `null`;
